ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-site-app
spec:
  rules:
  - host: "website.com"
    http:
      paths:
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: site-service
            port:
              number: 3000
  - host: "*.website.com"
    http:
      paths:
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: site-service
            port:
              number: 3000
